# fastapi-todo

./: .gitignore  Dockerfile  README.md  api.py  models.py  pyproject.toml  serializers.py  settings.py
.github/workflows/: cd.yml  ci.yml
tests/: conftest.py  test_api.py
