[project]
name = "todo"
version = "1.0.0"
description = "Fastapi based API of Todo application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.20",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
addopts = "--junitxml=reports/junit.xml  --cov=api --cov-report html"
